--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,34 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_secure_storage: ^10.0.0
+  shared_preferences: ^2.5.4
+  uuid: ^4.5.2
+  flutter_bloc: ^9.1.1
+  bloc: ^9.2.0
+  intl: ^0.20.2
+  get_it: ^9.2.0
+  json_annotation: ^4.10.0
+  flutter_dotenv: ^6.0.0
+  dio: ^5.9.1
+  pretty_dio_logger: ^1.4.0
+  freezed_annotation: ^3.1.0
+  flutter_screenutil: ^5.9.3
+  google_fonts: ^8.0.0
+  flutter_localization: ^0.3.3
+  go_router: ^17.1.0
+  retrofit: ^4.9.2
+  retrofit_generator: ^10.2.1
+  smooth_page_indicator: ^2.0.1
+  flutter_native_splash: ^2.4.7
+  awesome_dialog: ^3.3.0
+  pinput: ^6.0.1
+  freezed: ^3.2.5
+  flutter_rating_bar: ^4.0.1
+  flutter_launcher_icons: ^0.14.4
+  flutter_localizations:
+    sdk: flutter
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_test:
@@ -45,45 +73,33 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  build_runner: ^2.10.5
+  json_serializable: ^6.12.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/.env
+    - assets/images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
+# # ================= SPLASH SCREEN =================
+# flutter_native_splash:
+#   color: "#ffffff"
+#   image: assets/images/universe_logo.png
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
+#   android: true
+#   ios: true
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+#   android_12:
+#     color: "#ffffff"
+#     image: assets/images/universe_logo.png
+
+# flutter_icons:
+#   android: true
+#   ios: true
+#   image_path: assets/images/logo.png
