--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   logger: ^2.6.2
+  font_awesome_flutter: ^10.12.0
+  image_picker: ^1.2.1
+  file_picker: ^10.3.10
 
 dev_dependencies:
   flutter_test:
